Closed
Bug 772883
Opened 10 years ago
Closed 10 years ago
System proxy settings on Linux in nightlies (16.0a1) are broken
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: gk, Assigned: karlt)
References
Details
(Keywords: regression)
Attachments
(2 files)
43.21 KB,
image/png
|
Details | |
1.95 KB,
patch
|
roc
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; rv:10.0) Gecko/20100101 Firefox/10.0 Steps to reproduce: I upgraded Nightly on my Linux box to 16.0a1. Actual results: The system proxy settings option in the proxy preferences in Firefox vanished (see attachment) while it is still available on Aurora. Entering in the error console: Components.classes["@mozilla.org/system-proxy-settings;1"] gives Warning: ReferenceError: reference to undefined property Components.classes['@mozilla.org/system-proxy-settings;1'] Source File: javascript:%20Components.classes["@mozilla.org/system-proxy-settings;1"] Line: 1 provided javascript.options.strict is set to true. On Aurora I get: @mozilla.org/system-proxy-settings;1 instead indicating the component is still available. That is happening both on my Debian box with XFCE and on the latest Ubuntu with GNOME but not on Windows as far as I can see (I only had an old Win XP to test). Expected results: The system proxy settings should still be available.
Reporter | ||
Updated•10 years ago
|
OS: Windows 7 → Linux
Comment 1•10 years ago
|
||
It's missing from the UI because of this http://mxr.mozilla.org/mozilla-central/source/browser/components/preferences/connection.js#40 So the core question is why the undefined property? I doubt there's an error on Windows as the implementation is completely different. The linux/unix impl is here: http://mxr.mozilla.org/mozilla-central/source/toolkit/system/unixproxy/nsUnixSystemProxySettings.cpp Windows implementation is here: http://mxr.mozilla.org/mozilla-central/source/toolkit/system/windowsproxy/nsWindowsSystemProxySettings.cpp
Comment 2•10 years ago
|
||
I see this too. But neither the lines in connection.js nor nsUnixSystemProxySettings has been changed since February, so it must be something else. cc-ing reed, who touched the connection.js logic last.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•10 years ago
|
||
A regression range would probably be the most useful thing here.
Keywords: regressionwindow-wanted
Reporter | ||
Comment 4•10 years ago
|
||
(In reply to Josh Matthews [:jdm] from comment #3) > A regression range would probably be the most useful thing here. The bug is showing up in ftp://ftp.mozilla.org/pub/firefox/nightly/2012-06-17-mozilla-central-debug/ but not in ftp://ftp.mozilla.org/pub/firefox/nightly/2012-06-16-mozilla-central-debug/.
Comment 5•10 years ago
|
||
That should correspond to http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=4e3362864fbd&tochange=264f0a7a878c&, but I'm not seeing any culprit stick out at me :/
Comment 6•10 years ago
|
||
moving to Firefox, since AFAICT this is a UI issue and not the result of a necko change.
Component: Networking → Preferences
Product: Core → Firefox
Reporter | ||
Comment 7•10 years ago
|
||
This is definitely not only a Firefox issue. I can reproduce the bug on the latest Thunderbird Daily and Seamonkey Nightly as well. And why should that be a UI issue? Getting ReferenceError: reference to undefined property Components.classes['@mozilla.org/system-proxy-settings;1'] does not seem to involve a UI at all IMO.
Updated•10 years ago
|
![]() |
||
Comment 8•10 years ago
|
||
Regression window(m-i) Good: http://hg.mozilla.org/integration/mozilla-inbound/rev/290c7dcdeac3 Mozilla/5.0 (X11; Linux i686; rv:16.0) Gecko/16 Firefox/16.0a1 ID:20120615225224 Bad: http://hg.mozilla.org/integration/mozilla-inbound/rev/88d69928e3b1 Mozilla/5.0 (X11; Linux i686; rv:16.0) Gecko/16 Firefox/16.0a1 ID:20120615230725 Pushlog: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=290c7dcdeac3&tochange=88d69928e3b1 Suspected: Bug 627699
Blocks: gtk3
Assignee: nobody → stransky
Updated•10 years ago
|
Component: Networking → Widget: Gtk
Updated•10 years ago
|
Keywords: regressionwindow-wanted → regression
Updated•10 years ago
|
Assignee | ||
Comment 9•10 years ago
|
||
Caused by http://hg.mozilla.org/mozilla-central/diff/88d69928e3b1/toolkit/library/nsStaticXULComponents.cpp I assume we should just use MOZ_WIDGET_GTK and remove MOZ_ENABLE_GTK2 from toolkit/library/Makefile.in Looks like there's no point even testing for gtk for nsAutoConfigModule.
Assignee | ||
Comment 10•10 years ago
|
||
I checked that nsStaticXULComponents.o now contains nsUnixProxyModule (but haven't tried to pick up any GNOME proxy settings).
Attachment #648203 -
Flags: review?(roc) → review+
Assignee | ||
Comment 11•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/77fea247fe32 Try build here (Reftest had GL layers enabled): https://tbpl.mozilla.org/?tree=Try&rev=c91996287d43
Comment 12•10 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/77fea247fe32
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Assignee | ||
Comment 13•10 years ago
|
||
Comment on attachment 648203 [details] [diff] [review] replace MOZ_ENABLE_GTK with MOZ_WIDGET_GTK to restore nsUnixProxyModule [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 627699 User impact if declined: losing proxy configuration from system settings Testing completed (on m-c, etc.): on m-c Risk to taking this patch (and alternatives if risky): Low risk; this is restoring code that was accidentally removed. String or UUID changes made by this patch: None.
Attachment #648203 -
Flags: approval-mozilla-aurora?
Updated•10 years ago
|
Attachment #648203 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 14•10 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/7c89662c3310
status-firefox16:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•