b=772883 replace MOZ_ENABLE_GTK with MOZ_WIDGET_GTK to restore nsUnixProxyModule r=roc